Downgrading Python version to 3.10 as a potencial fix OOM bugs

--- a/DiffSinger_colab_notebook.ipynb
+++ b/DiffSinger_colab_notebook.ipynb
@@ -30,7 +30,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/usamireko/DiffSinger_colab_notebook_MLo7/blob/main/DiffSinger_colab_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/usamireko/DiffSinger4Colab/blob/main/DiffSinger_colab_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -86,6 +86,13 @@
         "\n",
         "\n",
         "branch_select = \"main\" # @param [\"main\", \"muon_lynxnet2\"]\n",
+        "print(\"Installing Python 3.10\")\n",
+        "!wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
+        "!chmod +x /content/mini.sh\n",
+        "!bash /content/mini.sh -b -f -p /usr/local\n",
+        "!conda install -q -y jupyter\n",
+        "!conda install -q -y google-colab -c conda-forge\n",
+        "!python -m ipykernel install --name \"py310\" --user\n",
         "\n",
         "disclaimer = \"\"\"\n",
         "alert(\"Please take in consideration that by using the Muon+Lynxnet2 branch is considered experimental! Stuff CAN break and behave in unexpected way.\");\n",
@@ -99,14 +106,14 @@
         "\n",
         "def setup_onnx_export():\n",
         "    print(\"ONNX Export Mode Enabled, Installing required components\")\n",
-        "    !git clone https://github.com/openvpi/DiffSinger.git -b {branch_select} /content/DiffSinger\n",
-        "    !wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
-        "    !chmod +x /content/mini.sh\n",
-        "    !bash /content/mini.sh -b -f -p /usr/local\n",
-        "    !conda install -q -y jupyter\n",
-        "    !conda install -q -y google-colab -c conda-forge\n",
-        "    !python -m ipykernel install --name \"py310\" --user\n",
-        "    print(\"installing dependencies for ONNX conversion\")\n",
+        "    #!git clone https://github.com/openvpi/DiffSinger.git -b {branch_select} /content/DiffSinger\n",
+        "    #!wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
+        "    #!chmod +x /content/mini.sh\n",
+        "    #!bash /content/mini.sh -b -f -p /usr/local\n",
+        "    #!conda install -q -y jupyter\n",
+        "    #!conda install -q -y google-colab -c conda-forge\n",
+        "    #!python -m ipykernel install --name \"py310\" --user\n",
+        "    #print(\"installing dependencies for ONNX conversion\")\n",
         "    !pip install -r /content/DiffSinger/requirements-onnx.txt -q -q -q 2>/dev/null\n",
         "    print(\"Installation complete, time to export those ONNX!\")\n",
         "\n",
@@ -172,12 +179,13 @@
         "print(\"|\")\n",
         "print(\"|\")\n",
         "print(\"|\")\n",
-        "!git clone https://github.com/MLo7Ghinsan/ghin_shenanigans /content/ghin_shenanigans 2>/dev/null\n",
-        "chika_dance = '<img src=\"https://raw.githack.com/MLo7Ghinsan/ghin_shenanigans/main/image_and_gif/chika_dance.gif\"/>'\n",
-        "display(HTML(chika_dance))\n",
-        "with open(\"/content/ghin_shenanigans/audio/setup_complete.wav\", \"rb\") as f:\n",
-        "    setup_complete_sound = f.read()\n",
-        "Audio(data=setup_complete_sound, autoplay=True)"
+        "#!git clone https://github.com/MLo7Ghinsan/ghin_shenanigans /content/ghin_shenanigans 2>/dev/null\n",
+        "#chika_dance = '<img src=\"https://raw.githack.com/MLo7Ghinsan/ghin_shenanigans/main/image_and_gif/chika_dance.gif\"/>'\n",
+        "display(HTML('''\n",
+        "<div style=\"text-align:center;\">\n",
+        "  <img src=\"https://files.catbox.moe/qcrz23.gif\" alt=\"Snow\" style=\"height:30%;\">\n",
+        "</div>\n",
+        "'''))"
       ]
     },
     {
@@ -1069,13 +1077,13 @@
         "  pass\n",
         "else:\n",
         "    print(\"Installing components to make ONNX work\")\n",
-        "    !wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
-        "    !chmod +x /content/mini.sh\n",
-        "    !bash /content/mini.sh -b -f -p /usr/local\n",
-        "    !conda install -q -y jupyter\n",
-        "    !conda install -q -y google-colab -c conda-forge\n",
-        "    !python -m ipykernel install --name \"py310\" --user\n",
-        "    print(\"installing dependencies for ONNX conversion\")\n",
+        "    #!wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
+        "    #!chmod +x /content/mini.sh\n",
+        "    #!bash /content/mini.sh -b -f -p /usr/local\n",
+        "    #!conda install -q -y jupyter\n",
+        "    #!conda install -q -y google-colab -c conda-forge\n",
+        "    #!python -m ipykernel install --name \"py310\" --user\n",
+        "    #print(\"installing dependencies for ONNX conversion\")\n",
         "    !pip install -r /content/DiffSinger/requirements-onnx.txt -q -q -q 2>/dev/null\n",
         "    print(\"Installation complete, time to export those ONNX!\")\n",
         "# to counter IF the user is to re-run this cell <3\n",
@@ -1209,7 +1217,8 @@
         "print(\"Or use the 'Build OpenUtau VB' cell to have things set up for you\")\n"
       ],
       "metadata": {
-        "id": "x33iZhZchEMW"
+        "id": "x33iZhZchEMW",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
