--- a/DiffSinger_colab_notebook.ipynb
+++ b/DiffSinger_colab_notebook.ipynb
@@ -75,8 +75,7 @@
       "execution_count": null,
       "metadata": {
         "id": "pK8aicf8A2sj",
-        "collapsed": true,
-        "cellView": "form"
+        "collapsed": true
       },
       "outputs": [],
       "source": [
@@ -86,13 +85,13 @@
         "\n",
         "\n",
         "branch_select = \"main\" # @param [\"main\", \"muon_lynxnet2\"]\n",
-        "print(\"Installing Python 3.10\")\n",
-        "!wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
-        "!chmod +x /content/mini.sh\n",
-        "!bash /content/mini.sh -b -f -p /usr/local\n",
-        "!conda install -q -y jupyter\n",
-        "!conda install -q -y google-colab -c conda-forge\n",
-        "!python -m ipykernel install --name \"py310\" --user\n",
+        "#print(\"Installing Python 3.10\")\n",
+        "#!wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
+        "#!chmod +x /content/mini.sh\n",
+        "#!bash /content/mini.sh -b -f -p /usr/local\n",
+        "#!conda install -q -y jupyter\n",
+        "#!conda install -q -y google-colab -c conda-forge\n",
+        "#!python -m ipykernel install --name \"py310\" --user\n",
         "\n",
         "disclaimer = \"\"\"\n",
         "alert(\"Please take in consideration that by using the Muon+Lynxnet2 branch is considered experimental! Stuff CAN break and behave in unexpected way.\");\n",
@@ -106,14 +105,14 @@
         "\n",
         "def setup_onnx_export():\n",
         "    print(\"ONNX Export Mode Enabled, Installing required components\")\n",
-        "    #!git clone https://github.com/openvpi/DiffSinger.git -b {branch_select} /content/DiffSinger\n",
-        "    #!wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
-        "    #!chmod +x /content/mini.sh\n",
-        "    #!bash /content/mini.sh -b -f -p /usr/local\n",
-        "    #!conda install -q -y jupyter\n",
-        "    #!conda install -q -y google-colab -c conda-forge\n",
-        "    #!python -m ipykernel install --name \"py310\" --user\n",
-        "    #print(\"installing dependencies for ONNX conversion\")\n",
+        "    !git clone https://github.com/openvpi/DiffSinger.git -b {branch_select} /content/DiffSinger\n",
+        "    !wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
+        "    !chmod +x /content/mini.sh\n",
+        "    !bash /content/mini.sh -b -f -p /usr/local\n",
+        "    !conda install -q -y jupyter\n",
+        "    !conda install -q -y google-colab -c conda-forge\n",
+        "    !python -m ipykernel install --name \"py310\" --user\n",
+        "    !print(\"installing dependencies for ONNX conversion\")\n",
         "    !pip install -r /content/DiffSinger/requirements-onnx.txt -q -q -q 2>/dev/null\n",
         "    print(\"Installation complete, time to export those ONNX!\")\n",
         "\n",
@@ -910,7 +909,7 @@
         "print(\"==========================================================================================\")\n",
         "print(\"\\n\")\n",
         "print(\"if you don't like or disagree with any of these options,\")\n",
-        "print(f\"you can go and edit the config at [/content/DiffSinger/configs/{model_type}.yaml]\")\n"
+        "print(f\"you can go and edit the config at [/content/DiffSinger/configs/{model_type}.yaml]\")"
       ],
       "metadata": {
         "id": "nI3dzDv_Mr9Y",
