--- a/DiffSinger_colab_notebook.ipynb
+++ b/DiffSinger_colab_notebook.ipynb
@@ -75,7 +75,8 @@
       "execution_count": null,
       "metadata": {
         "id": "pK8aicf8A2sj",
-        "collapsed": true
+        "collapsed": true,
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -1076,13 +1077,13 @@
         "  pass\n",
         "else:\n",
         "    print(\"Installing components to make ONNX work\")\n",
-        "    #!wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
-        "    #!chmod +x /content/mini.sh\n",
-        "    #!bash /content/mini.sh -b -f -p /usr/local\n",
-        "    #!conda install -q -y jupyter\n",
-        "    #!conda install -q -y google-colab -c conda-forge\n",
-        "    #!python -m ipykernel install --name \"py310\" --user\n",
-        "    #print(\"installing dependencies for ONNX conversion\")\n",
+        "    !wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
+        "    !chmod +x /content/mini.sh\n",
+        "    !bash /content/mini.sh -b -f -p /usr/local\n",
+        "    !conda install -q -y jupyter\n",
+        "    !conda install -q -y google-colab -c conda-forge\n",
+        "    !python -m ipykernel install --name \"py310\" --user\n",
+        "    print(\"installing dependencies for ONNX conversion\")\n",
         "    !pip install -r /content/DiffSinger/requirements-onnx.txt -q -q -q 2>/dev/null\n",
         "    print(\"Installation complete, time to export those ONNX!\")\n",
         "# to counter IF the user is to re-run this cell <3\n",
@@ -1216,8 +1217,7 @@
         "print(\"Or use the 'Build OpenUtau VB' cell to have things set up for you\")\n"
       ],
       "metadata": {
-        "id": "x33iZhZchEMW",
-        "cellView": "form"
+        "id": "x33iZhZchEMW"
       },
       "execution_count": null,
       "outputs": []
