--- a/DiffSinger_colab_notebook.ipynb
+++ b/DiffSinger_colab_notebook.ipynb
@@ -1050,9 +1050,7 @@
         "\n",
         "drop_out_path = drop_model_path[:-5] + '_spk-dropped.ckpt'\n",
         "\n",
-        "!python /content/DiffSinger/scripts/drop_spk.py {drop_model_path} {drop_out_path} --retain {retain_speakers} --fill {fill_embed}\n",
-        "\n",
-        "\n"
+        "!python /content/DiffSinger/scripts/drop_spk.py {drop_model_path} {drop_out_path} --retain {retain_speakers} --fill {fill_embed}"
       ],
       "metadata": {
         "id": "21ILzW4OEnh4",
@@ -1225,7 +1223,7 @@
         "print(\"\\n\")\n",
         "print(\"ONNX export complete! Please refer to https://github.com/xunmengshe/OpenUtau/wiki/Voicebank-Development to make your model OU compatible\")\n",
         "print(\"\\n\")\n",
-        "print(\"Or use the 'Build OpenUtau VB' cell to have things set up for you\")\n"
+        "print(\"Or use the 'Build OpenUtau VB' cell to have things set up for you\")"
       ],
       "metadata": {
         "id": "x33iZhZchEMW",
@@ -1322,10 +1320,10 @@
         "            out_f.write(\"- {symbol: SP, type: vowel}\\n\")\n",
         "            out_f.write(\"- {symbol: AP, type: vowel}\\n\")\n",
         "            for item in symbols:\n",
-        "                out_f.write(f\"- {{symbol: {item['symbol']}, type: {item['type']}}}\\\\n\")\n",
+        "                out_f.write(f\"- {{symbol: {item['symbol']}, type: {item['type']}}}\\n\")\n",
         "            out_f.write(\"\\nentries:\\n\")\n",
         "            for item in entries:\n",
-        "                out_f.write(f\"- {{grapheme: \\\"{item['grapheme']}\\\", phonemes: [\\\"{item['phonemes'][0]}\\\"]}}\\\\n\")\n",
+        "                out_f.write(f\"- {{grapheme: \\\"{item['grapheme']}\\\", phonemes: [\\\"{item['phonemes'][0]}\\\"]}}\\n\")\n",
         "            out_f.write(\"- {grapheme: \\\"SP\\\", phonemes: [SP]}\\n\")\n",
         "            out_f.write(\"- {grapheme: \\\"AP\\\", phonemes: [AP]}\\n\")\n",
         "\n",
@@ -1733,10 +1731,9 @@
         "    )\n",
         "    print(f\"ZIP created at: {zip_output_path}.zip\")\n",
         "else:\n",
-        "    print(\"OU folder not found, skipping zip step.\")\n"
+        "    print(\"OU folder not found, skipping zip step.\")"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "vaYxsV2ph7_u"
       },
       "execution_count": null,
