--- a/DiffSinger_colab_notebook.ipynb
+++ b/DiffSinger_colab_notebook.ipynb
@@ -85,7 +85,7 @@
         "from google.colab import drive\n",
         "\n",
         "\n",
-        "branch_select = \"muon_lynxnet2\" # @param [\"main\", \"muon_lynxnet2\"]\n",
+        "branch_select = \"main\" # @param [\"main\", \"muon_lynxnet2\"]\n",
         "#print(\"Installing Python 3.10\")\n",
         "#!wget -O /content/mini.sh https://repo.anaconda.com/miniconda/Miniconda3-py310_25.1.1-2-Linux-x86_64.sh\n",
         "#!chmod +x /content/mini.sh\n",
@@ -165,7 +165,7 @@
         "    clear_output()\n",
         "\n",
         "#@title # Mount Google Drive and Setup\n",
-        "export_mode = True # @param {\"type\":\"boolean\"}\n",
+        "export_mode = False # @param {\"type\":\"boolean\"}\n",
         "drive.mount(\"/content/drive\")\n",
         "\n",
         "\n",
@@ -1061,15 +1061,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "efy5v82RuDQa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "#@markdown # Export ONNX\n",
         "#@markdown ___\n",
@@ -1249,7 +1240,7 @@
         "# Code from autodsdict.py\n",
         "\n",
         "def dictgenerator(aco_folder_dir, main_stuff):\n",
-        "    aco_folder_onnx = os.path.join(aco_folder_dir, \"onnx\")\n",
+        "    aco_folder_onnx = os.path.join(aco_folder_dir)\n",
         "    phoneme_types_list = {\n",
         "        \"a\": \"vowel\", \"i\": \"vowel\", \"u\": \"vowel\", \"e\": \"vowel\", \"o\": \"vowel\",\n",
         "        \"b\": \"stop\", \"d\": \"stop\", \"g\": \"stop\", \"k\": \"stop\", \"p\": \"stop\", \"q\": \"stop\", \"t\": \"stop\",\n",
@@ -1696,11 +1687,11 @@
         "# @markdown ### Export Settings\n",
         "# @markdown Enter the paths to your model folders.\n",
         "\n",
-        "OU_NAME = \"\" # @param {type:\"string\"}\n",
-        "EXPORT_LOCATION = \"\" # @param {type:\"string\"}\n",
-        "ACOUSTIC_FOLDER = \"\" # @param {type:\"string\"}\n",
-        "VARIANCE_FOLDER = \"\" # @param {type:\"string\"}\n",
-        "VOCODER_ONNX = \"\" # @param {type:\"string\"}\n",
+        "OU_NAME = \"name\" # @param {type:\"string\"}\n",
+        "EXPORT_LOCATION = \"where_to_drop_output\" # @param {type:\"string\"}\n",
+        "ACOUSTIC_FOLDER = \"full_path_to_acoustic_onnx\" # @param {type:\"string\"}\n",
+        "VARIANCE_FOLDER = \"full_path_to_variance_onnx\" # @param {type:\"string\"}\n",
+        "VOCODER_ONNX = \"optional\" # @param {type:\"string\"}\n",
         "AUTO_DICTIONARY = True # @param {type:\"boolean\"}\n",
         "\n",
         "# Handle empty string for optional vocoder\n",
@@ -1734,7 +1725,8 @@
         "    print(\"OU folder not found, skipping zip step.\")"
       ],
       "metadata": {
-        "id": "vaYxsV2ph7_u"
+        "id": "vaYxsV2ph7_u",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
