--- a/DiffSinger_colab_notebook.ipynb
+++ b/DiffSinger_colab_notebook.ipynb
@@ -1396,10 +1396,10 @@
         "                if dictionary_ext not in ou_canon_languages: #all default OU phonemizers have been patched to take langcodes, replacements not needed\n",
         "                    out_f.write(\"\\nreplacements:\\n\")\n",
         "                    for item in replacements:\n",
-        "                        out_f.write(f\"- {{from: \\\"{item['from']}\\\", to: \\\"{item['to']}\\\"}}\\\\n\")\n",
+        "                        out_f.write(f\"- {{from: \\\"{item['from']}\\\", to: \\\"{item['to']}\\\"}}\\n\")\n",
         "                out_f.write(\"\\nentries:\\n\")\n",
         "                for item in entries:\n",
-        "                    out_f.write(f\"- {{grapheme: \\\"{item['grapheme']}\\\", phonemes: [\\\"{item['phonemes'][0]}\\\"]}}\\\\n\")\n",
+        "                    out_f.write(f\"- {{grapheme: \\\"{item['grapheme']}\\\", phonemes: [\\\"{item['phonemes'][0]}\\\"]}}\\n\")\n",
         "                out_f.write(\"- {grapheme: \\\"SP\\\", phonemes: [SP]}\\n\")\n",
         "                out_f.write(\"- {grapheme: \\\"AP\\\", phonemes: [AP]}\\n\")\n",
         "\n",
@@ -1414,7 +1414,7 @@
         "                out_f.write(f\"- {{symbol: {item['symbol']}, type: {item['type']}}}\\n\")\n",
         "            out_f.write(\"\\nentries:\\n\")\n",
         "            for item in all_entries:\n",
-        "                out_f.write(f\"- {{grapheme: \\\"{item['grapheme']}\\\", phonemes: [\\\"{item['phonemes'][0]}\\\"]}}\\\\n\")\n",
+        "                out_f.write(f\"- {{grapheme: \\\"{item['grapheme']}\\\", phonemes: [\\\"{item['phonemes'][0]}\\\"]}}\\n\")\n",
         "            out_f.write(\"- {grapheme: \\\"SP\\\", phonemes: [SP]}\\n\")\n",
         "            out_f.write(\"- {grapheme: \\\"AP\\\", phonemes: [AP]}\\n\")\n",
         "\n",
@@ -1688,10 +1688,10 @@
         "# @markdown Enter the paths to your model folders.\n",
         "\n",
         "OU_NAME = \"name\" # @param {type:\"string\"}\n",
-        "EXPORT_LOCATION = \"where_to_drop_output\" # @param {type:\"string\"}\n",
-        "ACOUSTIC_FOLDER = \"full_path_to_acoustic_onnx\" # @param {type:\"string\"}\n",
-        "VARIANCE_FOLDER = \"full_path_to_variance_onnx\" # @param {type:\"string\"}\n",
-        "VOCODER_ONNX = \"optional\" # @param {type:\"string\"}\n",
+        "EXPORT_LOCATION = \"full_path_to_drop_file\" # @param {type:\"string\"}\n",
+        "ACOUSTIC_FOLDER = \"full_path_acoustic_onnx_folder\" # @param {type:\"string\"}\n",
+        "VARIANCE_FOLDER = \"full_path_variance_onnx_folder\" # @param {type:\"string\"}\n",
+        "VOCODER_ONNX = \"leave_empty_if_none\" # @param {type:\"string\"}\n",
         "AUTO_DICTIONARY = True # @param {type:\"boolean\"}\n",
         "\n",
         "# Handle empty string for optional vocoder\n",
