Fixing massive mistake that broke ONNX export

--- a/DiffSinger_colab_notebook.ipynb
+++ b/DiffSinger_colab_notebook.ipynb
@@ -30,7 +30,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/usamireko/DiffSinger4Colab/blob/wip/DiffSinger_colab_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/usamireko/DiffSinger4Colab/blob/main/DiffSinger_colab_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -113,9 +113,10 @@
         "    !conda install -q -y jupyter\n",
         "    !conda install -q -y google-colab -c conda-forge\n",
         "    !python -m ipykernel install --name \"py310\" --user\n",
-        "    !print(\"Installing dependencies for ONNX conversion\")\n",
+        "    print(\"Installing dependencies for ONNX conversion\")\n",
+        "    clear_output()\n",
         "    !pip install -r /content/DiffSinger/requirements-onnx.txt -q -q -q 2>/dev/null\n",
-        "    !print(\"Installation complete, time to export those ONNX!\")\n",
+        "    print(\"Installation complete, time to export those ONNX!\")\n",
         "\n",
         "def setup_standard():\n",
         "    if not os.path.exists(\"/content/pretrain_models\"):\n",
@@ -1094,12 +1095,12 @@
         "#@markdown  select this if you don't want to see the onnx converter's output\n",
         "no_output = True # @param {type:\"boolean\"}\n",
         "\n",
-        "#@markdown  path to your **ACOUSTIC CHECKPOINT** (leave blank if you don't have any): automatically use latest checkpoint that is in the same folder\n",
+        "#@markdown  path to your **ACOUSTIC CHECKPOINT FOLDER** (leave blank if you don't have any): automatically use latest checkpoint that is in the same folder\n",
         "acoustic_checkpoint_path = \"\" #@param{type:\"string'}\n",
         "acoustic_folder_name = os.path.basename(os.path.dirname(acoustic_checkpoint_path)) + \"_acoustic\"\n",
         "acoustic_folder_path = os.path.dirname(acoustic_checkpoint_path)\n",
         "\n",
-        "#@markdown  path to your **VARIANCE CHECKPOINT** (leave blank if you don't have any): automatically use latest checkpoint that is in the same folder\n",
+        "#@markdown  path to your **VARIANCE CHECKPOINT FOLDER** (leave blank if you don't have any): automatically use latest checkpoint that is in the same folder\n",
         "variance_checkpoint_path = \"\" #@param{type:\"string'}\n",
         "variance_folder_name = os.path.basename(os.path.dirname(variance_checkpoint_path)) + \"_variance\"\n",
         "variance_folder_path = os.path.dirname(variance_checkpoint_path)\n",
@@ -1117,9 +1118,7 @@
         "    print(\"\\n\")\n",
         "    print(\"converting acoustic to onnx...\")\n",
         "    #cp stuff cus apparently exporter doesnt work without it\n",
-        "    !cp {acoustic_checkpoint_path}/config.yaml -r {acoustic_onnx_exp}\n",
-        "    !cp {variance_checkpoint_path}/config.yaml -r {variance_onnx_exp}\n",
-        "    !cp {acoustic_checkpoint_path}/config.yaml -r /content/DiffSinger/checkpoints/{acoustic_folder_name}\n",
+        "    !cp \"{acoustic_checkpoint_path}/config.yaml\" \"/content/DiffSinger/checkpoints/{acoustic_folder_name}\"\n",
         "    search_text = \"        args_work_dir = os.path.join(\"\n",
         "    replacement = f\"        args_work_dir = '{acoustic_folder_path}'\"\n",
         "    with open(\"/content/DiffSinger/utils/hparams.py\", \"r\") as file:\n",
@@ -1155,7 +1154,7 @@
         "    print(\"\\n\")\n",
         "    print(\"converting variance to onnx...\")\n",
         "    #cp stuff cus apparently exporter doesnt work without it\n",
-        "    !cp {variance_folder_path}/config.yaml -r /content/DiffSinger/checkpoints/{variance_folder_name}\n",
+        "    !cp \"{variance_checkpoint_path}/config.yaml\" -r \"/content/DiffSinger/checkpoints/{variance_folder_name}\"\n",
         "    search_text = \"        args_work_dir = os.path.join(\"\n",
         "    replacement = f\"        args_work_dir = '{variance_folder_path}'\"\n",
         "    with open(\"/content/DiffSinger/utils/hparams.py\", \"r\") as file:\n",
@@ -1211,13 +1210,18 @@
         "        old_path = os.path.join(folder_path, filename)\n",
         "        new_path = os.path.join(folder_path, new_filename)\n",
         "        os.rename(old_path, new_path)\n",
+        "\n",
+        "#Fix: Fixing a stupid mistake I comitted.\n",
+        "!cp \"{acoustic_checkpoint_path}/config.yaml\" \"{acoustic_onnx_exp}/config.yaml\"\n",
+        "!cp \"{variance_checkpoint_path}/config.yaml\" \"{variance_onnx_exp}/config.yaml\"\n",
         "print(\"\\n\")\n",
         "print(\"ONNX export complete! Please refer to https://github.com/xunmengshe/OpenUtau/wiki/Voicebank-Development to make your model OU compatible\")\n",
         "print(\"\\n\")\n",
         "print(\"Or use the 'Build OpenUtau VB' cell to have things set up for you\")"
       ],
       "metadata": {
-        "id": "x33iZhZchEMW"
+        "id": "x33iZhZchEMW",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -1687,7 +1691,7 @@
         "# @markdown Enter the paths to your model folders.\n",
         "\n",
         "OU_NAME = \"name\" # @param {type:\"string\"}\n",
-        "EXPORT_LOCATION = \"full_path_to_drop_file\" # @param {type:\"string\"}\n",
+        "EXPORT_LOCATION = \"full_path_to_drop_zip\" # @param {type:\"string\"}\n",
         "ACOUSTIC_FOLDER = \"full_path_acoustic_onnx_folder\" # @param {type:\"string\"}\n",
         "VARIANCE_FOLDER = \"full_path_variance_onnx_folder\" # @param {type:\"string\"}\n",
         "#@markdown <font size=\"-1.5\"> Leave empty if no custom/fine-tuned vocoder\n",
