--- a/DiffSinger_colab_notebook.ipynb
+++ b/DiffSinger_colab_notebook.ipynb
@@ -30,7 +30,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/usamireko/DiffSinger4Colab/blob/main/DiffSinger_colab_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/BagelHero/DiffSinger4Colab/blob/main/DiffSinger_colab_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1096,11 +1096,13 @@
         "\n",
         "#@markdown  path to your **ACOUSTIC CHECKPOINT FOLDER** (leave blank if you don't have any): automatically use latest checkpoint that is in the same folder\n",
         "acoustic_checkpoint_path = \"\" #@param{type:\"string'}\n",
+        "acoustic_checkpoint_path = os.path.join(acoustic_checkpoint_path, \"\")\n",
         "acoustic_folder_name = os.path.basename(os.path.dirname(acoustic_checkpoint_path)) + \"_acoustic\"\n",
         "acoustic_folder_path = os.path.dirname(acoustic_checkpoint_path)\n",
         "\n",
         "#@markdown  path to your **VARIANCE CHECKPOINT FOLDER** (leave blank if you don't have any): automatically use latest checkpoint that is in the same folder\n",
         "variance_checkpoint_path = \"\" #@param{type:\"string'}\n",
+        "variance_checkpoint_path = os.path.join(variance_checkpoint_path, \"\")\n",
         "variance_folder_name = os.path.basename(os.path.dirname(variance_checkpoint_path)) + \"_variance\"\n",
         "variance_folder_path = os.path.dirname(variance_checkpoint_path)\n",
         "\n",
@@ -1153,7 +1155,7 @@
         "    print(\"\\n\")\n",
         "    print(\"converting variance to onnx...\")\n",
         "    #cp stuff cus apparently exporter doesnt work without it\n",
-        "    !cp \"{variance_checkpoint_path}/config.yaml\" -r \"/content/DiffSinger/checkpoints/{variance_folder_name}\"\n",
+        "    !cp \"{variance_checkpoint_path}/config.yaml\" \"/content/DiffSinger/checkpoints/{variance_folder_name}\"\n",
         "    search_text = \"        args_work_dir = os.path.join(\"\n",
         "    replacement = f\"        args_work_dir = '{variance_folder_path}'\"\n",
         "    with open(\"/content/DiffSinger/utils/hparams.py\", \"r\") as file:\n",
@@ -1728,8 +1730,7 @@
         "    print(\"OU folder not found, skipping zip step.\")"
       ],
       "metadata": {
-        "id": "vaYxsV2ph7_u",
-        "cellView": "form"
+        "id": "vaYxsV2ph7_u"
       },
       "execution_count": null,
       "outputs": []
