--- a/DiffSinger_colab_notebook.ipynb
+++ b/DiffSinger_colab_notebook.ipynb
@@ -75,7 +75,8 @@
       "execution_count": null,
       "metadata": {
         "id": "pK8aicf8A2sj",
-        "collapsed": true
+        "collapsed": true,
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -1730,7 +1731,8 @@
         "    print(\"OU folder not found, skipping zip step.\")"
       ],
       "metadata": {
-        "id": "vaYxsV2ph7_u"
+        "id": "vaYxsV2ph7_u",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
