Updating Torch to 2.10.0

--- a/DiffSinger_colab_notebook.ipynb
+++ b/DiffSinger_colab_notebook.ipynb
@@ -131,7 +131,7 @@
         "    !git clone https://github.com/MLo7Ghinsan/ghin_shenanigans /content/ghin_shenanigans\n",
         "    !git clone https://github.com/openvpi/SOME /content/SOME\n",
         "    clear_output()\n",
-        "    !pip install torch==2.8.0 torchvision==0.23.0 torchaudio==2.8.0\n",
+        "    !pip install torch torchvision torchaudio\n",
         "    clear_output()\n",
         "    !pip install -r /content/DiffSinger/requirements.txt\n",
         "    !pip install -r /content/SOME/requirements.txt\n",
