--- a/DiffSinger_colab_notebook.ipynb
+++ b/DiffSinger_colab_notebook.ipynb
@@ -75,7 +75,8 @@
       "execution_count": null,
       "metadata": {
         "id": "pK8aicf8A2sj",
-        "collapsed": true
+        "collapsed": true,
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
